--- a/uk/mail/chrome/messenger/preferences/applicationManager.properties
+++ b/uk/mail/chrome/messenger/preferences/applicationManager.properties
@@ -1,10 +1,9 @@
-# FIXME 
 # LOCALIZATION NOTE
 # in descriptionApplications, %S will be replaced by one of the 3 following strings
-descriptionApplications=The following applications can be used to handle %S.
+descriptionApplications=Наступні програми будуть використані для обробки %S.
 
-handleProtocol=%S links
-handleFile=%S content
+handleProtocol=посилань %S
+handleFile=змісту %S
 
-descriptionWebApp=This web application is hosted at:
-descriptionLocalApp=This application is located at:
+descriptionWebApp=Ця веб-програма знаходиться на:
+descriptionLocalApp=Ця програма знаходиться у:
