--- a/uk/mail/chrome/messenger/search-attributes.properties
+++ b/uk/mail/chrome/messenger/search-attributes.properties
@@ -1,6 +1,5 @@
 #these need to match nsMsgSearchAttrib interface in nsMsgSearchCore.idl
 #and nsMsgSearchAttribMap in nsMsgSearchAdapter.cpp
-# FIXME
 Subject=Тема
 From=Відправник
 Body=Тіло
@@ -32,11 +31,11 @@ Title=Титул
 Organization=Організація
 Department=Відділ
 # more mailnews
-FromToCcOrBcc=From, To, Cc or Bcc
-JunkScoreOrigin=Junk Score Origin
-JunkPercent=Junk Percent
-AttachmentStatus=Attachment Status
+FromToCcOrBcc=Від, До, Cc чи Bcc
+JunkScoreOrigin=Походження оцінки спамності
+JunkPercent=Відсоток спамності
+AttachmentStatus=Стан вкладень
 JunkStatus=Ознака спаму
 Label=Позначка
 Customize=Налаштувати…
-MissingCustomTerm=Missing Custom Term
+MissingCustomTerm=Відсутня власна умова
