--- a/uk/mail/chrome/messenger/shutdownWindow.properties
+++ b/uk/mail/chrome/messenger/shutdownWindow.properties
@@ -1,4 +1,3 @@
-# FIXME: localize
 # ***** BEGIN LICENSE BLOCK *****
 # Version: MPL 1.1/GPL 2.0/LGPL 2.1
 #
@@ -38,7 +37,7 @@
 
 
 # These strings are loaded and represented by the XUL dialog.
-shutdownDialogTitle=Shutdown Progress Window
-taskProgress=Processing %1$S of %2$S Tasks 
+shutdownDialogTitle=Вікно перебігу закриття
+taskProgress=Виконується %1$S з %2$S задач
 
 # These strings are loaded by the individual shutdown tasks.
