--- a/uk/mail/chrome/messenger/accountCreation.properties
+++ b/uk/mail/chrome/messenger/accountCreation.properties
@@ -2,53 +2,53 @@
 # accountCreation.properties
 
 # LOCALIZATION NOTE(cleartext_warning): %1$S will be the hostname of the server the user was trying to connect to.
-cleartext_warning=%1$S does not use encryption.
+cleartext_warning=%1$S не використовує шифрування.
 # LOCALIZATION NOTE(selfsigned_warning): %1$S will be the hostname of the server the user was trying to connect to.
-selfsigned_warning=%1$S does not use a trusted certificate.
-selfsigned_details=Normally, a secure mail server will present a trusted certificate to prove that it is really the server it claims to be. The connection to the mail server will be encrypted but cannot be validated as being the correct server.
-cleartext_details=Insecure mail servers do not use encrypted connections to protect your passwords and private information. By connecting to this server you could expose your password and private information.
+selfsigned_warning=%1$S не використовує довірений сертифікат.
+selfsigned_details=Зазвичай, безпечний поштовий сервер надає довірений сертифікат, щоб довести що він дійсно той сервер за який себе видає. Зв’язок з сервером буде шифровано, але неможливо перевірити, чи це дійсно той сервер.
+cleartext_details=Небезпечні поштові сервери не використовують шифрований зв’язок для захисту ваших паролей та іншої особистої інформації. З’єднуючись з цим сервером ви можете видати ваш пароль та особисту інформацію.
 
 # LOCALIZATION NOTE(default_server_tag): Used to indicate the default smtp server in the server dropdown list.
-default_server_tag= (default)
+default_server_tag= (типовий)
 
 # config titles
 # LOCALIZATION NOTE(looking_up_settings): %1$S will be the brandShortName.
-looking_up_settings=%1$S is looking up the settings for your email account.
-manually_edit_config=Editing Config
+looking_up_settings=%1$S шукає налаштування вашого поштового рахунку.
+manually_edit_config=Редагування конфігурації
 # LOCALIZATION NOTE(found_settings): %1$S will be the brandShortName.
-found_settings=%1$S has found the settings for your email account.
+found_settings=%1$S знайшов налаштування вашого поштового рахунку.
 # LOCALIZATION NOTE(failed_to_find_settings): %1$S will be the brandShortName.
-failed_to_find_settings=%1$S failed to find the settings for your email account.
+failed_to_find_settings=%1$S не зміг знайти налаштування вашого поштового рахунку.
 
 # config subtitles
-check_preconfig=checking for pre-configuration…
-found_preconfig=found pre-configuration
-checking_config=checking configuration…
-found_config=Found configuration of your account
-checking_mozilla_config=checking Mozilla Community configurations…
-found_isp_config=found a configuration
-probing_config=probing configuration…
-guessing_from_email=guessing configuration…
-config_details_found=Your configuration details have been found!
-config_unverifiable=Configuration could not be verified — is the username or password wrong?
-incoming_found_specify_outgoing=Your incoming server configuration details have been found, please specify the sending hostname.
-outgoing_found_specify_incoming=Your outgoing server configuration details have been found, please specify the receiving hostname.
-please_enter_missing_hostnames=Could not guess settings — please enter missing hostnames.
-incoming_failed_trying_outgoing=Could not automatically configure incoming server, still trying for outgoing server.
-outgoing_failed_trying_incoming=Could not automatically configure outgoing server, still trying for incoming server.
-checking_password=Checking password…
-password_ok=Password ok!
-user_pass_invalid=Username or password invalid
-check_server_details=Checking server details
-check_in_server_details=Checking incoming server details
-check_out_server_details=Checking outgoing server details
+check_preconfig=опитування пре-конфігурації…
+found_preconfig=знайдено пре-конфігурацію
+checking_config=перевірка конфігурації…
+found_config=Знайдено конфігурацію вашого рахунку
+checking_mozilla_config=опитування конфігурації Спільноти Mozilla…
+found_isp_config=знайдено конфігурацію
+probing_config=випробовування конфігурації…
+guessing_from_email=вгадування конфігурації…
+config_details_found=Знайдено подробиці вашої конфігурації!
+config_unverifiable=Конфігурацію неможливо перевірити — може ім’я чи пароль неправильні?
+incoming_found_specify_outgoing=Подробиці конфігурації вашого сервера вхідних повідомлень знайдено, будь ласка вкажіть ім’я вихідного.
+outgoing_found_specify_incoming=Подробиці конфігурації вашого сервера вихідних повідомлень знайдено, будь ласка вкажіть ім’я вхідного.
+please_enter_missing_hostnames=Не можу вгадати налаштування — буь ласка введіть відсутні імена серверів.
+incoming_failed_trying_outgoing=Не можу автоматично сконфігурувати вхідний сервер, все ще намагаюсь щодо вихідного.
+outgoing_failed_trying_incoming=Не можу автоматично сконфігурувати вихідний сервер, все ще намагаюсь щодо вхідного.
+checking_password=Перевірка пароля…
+password_ok=Пароль підійшов!
+user_pass_invalid=Ім’я чи пароль недійсні
+check_server_details=Перевірка подробиць сервера
+check_in_server_details=Перевірка подробиць вхідного сервера
+check_out_server_details=Перевірка подробиць вихідного сервера
 
-error_creating_account=Error Creating Account
-incoming_server_exists=Incoming server already exists.
+error_creating_account=Помилка створення рахунку
+incoming_server_exists=Вхідний сервер вже існує.
 
-no_encryption=No encryption
+no_encryption=Нема шифрування
 ssl_tls=SSL/TLS
 starttls=STARTTLS
 
-please_enter_name=Please enter your name.
-double_check_email=Double check this email address!
+please_enter_name=Будь ласка введіть ваше ім’я.
+double_check_email=Двічі перевірте цю адресу!
