--- a/uk/mail/chrome/messenger/preferences/preferences.properties
+++ b/uk/mail/chrome/messenger/preferences/preferences.properties
@@ -15,29 +15,29 @@ confirmResetJunkTrainingText=Ви впевнені, що хочете спрос
 #### Downloads
 desktopFolderName=Робочий стіл
 myDownloadsFolderName=Мої завантаження
-chooseAttachmentsFolderTitle=Choose Folder
+chooseAttachmentsFolderTitle=Оберіть теку
 
 #### Applications FIXME
 
 fileEnding=%S файл
-saveFile=Save File
+saveFile=Зберегти файл
 
 # LOCALIZATION NOTE (useApp, useDefault): %S = Application name
-useApp=Use %S
-useDefault=Use %S (default)
+useApp=Використовувати %S
+useDefault=Використовувати %S (типово)
 
-useOtherApp=Use other…
+useOtherApp=Використовувати іншу…
 fpTitleChooseApp=Виберіть допоміжну програму
-manageApp=Application Details…
-alwaysAsk=Always ask
-delete=Delete Action
-confirmDeleteTitle=Delete Action
-confirmDeleteText=Are you sure you want to delete this action?
+manageApp=Подробиці програми…
+alwaysAsk=Завжди питати
+delete=Стерти дію
+confirmDeleteTitle=Стерти дію
+confirmDeleteText=Чи ви певні що хочете стерти цю дію?
 
 # LOCALIZATION NOTE (usePluginIn):
 # %1$S = plugin name (for example "QuickTime Plugin-in 7.2")
 # %2$S = brandShortName from brand.properties (for example "Shredder")
-usePluginIn=Use %1$S (in %2$S)
+usePluginIn=Використовувати %1$S (у %2$S)
 
 # LOCALIZATION NOTE (typeDescriptionWithDetails):
 # %1$S = type description (for example "Portable Document Format")
@@ -67,23 +67,23 @@ attachmentReminderEditDialogTitle=Редагувати ключове слово
 attachmentReminderEditText=Ключове слово:
 
 #### Cookies
-cookiepermissionstitle=Exceptions - Cookies
-cookiepermissionstext=You can specify which web sites are always or never allowed to use cookies.  Type the exact address of the site you want to manage and then click Block, Allow for Session, or Allow.
-invalidURI=Please enter a valid hostname
-invalidURITitle=Invalid Hostname Entered
+cookiepermissionstitle=Винятки — Куки
+cookiepermissionstext=Ви можете вказати сайти котрим завжди буде дозволено, або назавжди заборонено використовувати куки.  Введіть точну адресу сайта, котрий хочете вказати, і потім клацніть по Блокувати, Дозволити на сеанс чи Дозволити.
+invalidURI=Будь ласка вкажіть дійсне ім’я хоста
+invalidURITitle=Введено недійсне ім’я хоста
 
 #### Cookie Viewer
-hostColon=Host:
-domainColon=Domain:
-forSecureOnly=Encrypted connections only
-forAnyConnection=Any type of connection
-AtEndOfSession=at end of session
-can=Allow
-canSession=Allow for Session
-cannot=Block
-noCookieSelected=<no cookie selected>
-cookiesAll=The following cookies are stored on your computer:
-cookiesFiltered=The following cookies match your search:
-removeCookies=Remove Cookies
-removeCookie=Remove Cookie
+hostColon=Хост:
+domainColon=Домен:
+forSecureOnly=Лише шифровані зв’язки
+forAnyConnection=Будь який тип зв’язку
+AtEndOfSession=на кінці сеансу
+can=Дозволити
+canSession=Дозволити на сеанс
+cannot=Блокувати
+noCookieSelected=<куки не вибрано>
+cookiesAll=Наступні куки зберігаються на вашому комп’ютері:
+cookiesFiltered=Наступні куки відповідають умовам пошуку:
+removeCookies=Вилучити куки
+removeCookie=Вилучити куку
 
