Update pt-BR l10n for mail

--- a/pt-BR/mail/chrome/messenger-newsblog/newsblog.properties
+++ b/pt-BR/mail/chrome/messenger-newsblog/newsblog.properties
@@ -16,20 +16,23 @@ subscribe-errorInvalidOPMLFile=Ou %S não é um arquivo OPML válido ou houve um
 
 subscribe-OPMLExportOPMLFilesFilterText=Arquivos OPML
 
-subscribe-confirmFeedDeletionTitle=Remove Feed
+subscribe-confirmFeedDeletionTitle=Excluir RSS
 ## LOCALIZATION NOTE(subscribe-confirmFeedDeletion): %S is the name of the feed the user wants to unsubscribe from.
-subscribe-confirmFeedDeletion=Are you sure you want to unsubscribe from the feed: \n %S?
+subscribe-confirmFeedDeletion=Tem certeza que deseja desinscrever-se do RSS:\n%S?
 
 ## LOCALIZATION NOTE(subscribe-gettingFeedItems):
 ##  - The first %S is the number of articles processed so far;
 ##  - The second %S is the total number of items
-subscribe-gettingFeedItems=Downloading feed articles (%S of %S)…
+subscribe-gettingFeedItems=Recebendo itens do RSS (%S de %S)…
 
 newsblog-noNewArticlesForFeed=Não há novos itens neste RSS.
-newsblog-networkErrorTitle=Network Error
+newsblog-networkErrorTitle=Erro de rede
 ## LOCALIZATION NOTE(newsblog-networkError): %S is the feed URL
 newsblog-networkError=%S não foi encontrado. Por favor, verifique o nome e tente de novo.
 newsblog-feedNotValidTitle=RSS inválido
 ## LOCALIZATION NOTE(newsblog-feedNotValid): %S is the feed URL
-newsblog-feedNotValid=%S is not a valid feed.
-newsblog-getNewMsgsCheck=Checking feeds for new items…
+newsblog-feedNotValid=%S não é um RSS válido.
+newsblog-getNewMsgsCheck=Verificando se há novos itens nos RSS…
+
+## LOCALIZATION NOTE(feeds-accountname): This string should be the same as feeds.accountName in am-newsblog.dtd
+feeds-accountname=RSS de blogs e notícias
