--- a/pt-BR/mail/chrome/messenger/messenger.properties
+++ b/pt-BR/mail/chrome/messenger/messenger.properties
@@ -117,7 +117,7 @@ defaultServerTag=(Padrão)
 # Used in message database list view to provide a text value for graphic based cells.
 messageUnread=Não lidas
 messageHasFlag=Com estrela
-messageHasAttachment=Has Attachment
+messageHasAttachment=Com anexo
 messageJunk=Anti-spam
 messageExpanded=Expanded
 messageCollapsed=Collapsed
@@ -317,8 +317,8 @@ nocachedbodytitle=<TITLE>Saia do modo offline para exibir esta mensagem</TITLE>\
 confirmUnsubscribeTitle=Confirmar
 confirmUnsubscribeText=Tem certeza que deseja cancelar a inscrição de %S?
 confirmUnsubscribeManyText=Tem certeza que deseja cancelar a inscrição nestes newsgroups?
-feedNoSummaryTitle=No Feed Summary
-feedNoSummaryAlert=This is a news feed in an old format, which does not store the Summary of the news item. Therefore it cannot be displayed.
+feedNoSummaryTitle=Sem resumo de RSS
+feedNoSummaryAlert=Este é um RSS em um formato antigo, que não armazena o resumo do item. Portanto ele não poderá ser exibido.
 
 # msgHdrViewOverlay.js
 openLabel=Abrir
@@ -444,8 +444,8 @@ folderPaneHeader_all=Todas as pastas
 folderPaneHeader_unread=Pastas não lidas
 folderPaneHeader_favorite=Pastas favoritas
 folderPaneHeader_recent=Pastas recentes
-folderPaneHeader_smart=Smart Folders
-smartAccountName=Smart Folders
+folderPaneHeader_smart=Pastas inteligentes
+smartAccountName=Pastas inteligentes
 
 # Copy / Move to Folder Again
 #LOCALIZATION NOTE %1$S is the name of the folder we will move to. moveToFolderAgainAccessKey
@@ -487,26 +487,43 @@ fileEmptyTitle = Arquivo vazio
 #LOCALIZATION NOTE(fileEmptyMsg): %S is the filename
 fileEmptyMsg = O arquivo %S está vazio.
 
-# second person direct object pronoun; used in the collapsed header view if
-# the user is in the To or Cc field of a message
-headerFieldYou=Você
+# LOCALIZATION NOTE (headertoFieldYou): second person prepositional object
+# pronoun used in the "to" header of the message header pane.  This is also
+# used for the fallback case if a header-specific localization is not
+# available.
+headertoFieldYou=Você
+
+# LOCALIZATION NOTE (headerfromFieldYou): second person prepositional object
+# pronoun used in the "from" header of the message header pane.
+headerfromFieldYou=Você
+
+# LOCALIZATION NOTE (headerreply-toFieldYou): second person prepositional
+# object pronoun used in the "reply-to" header of the message header pane.
+headerreply-toFieldYou=Você
+
+# LOCALIZATION NOTE (headerccFieldYou): second person prepositional object
+# pronoun used in the "cc" header of the message header pane.
+headerccFieldYou=Você
+
+# LOCALIZATION NOTE (headerbccFieldYou): second person prepositional object
+# pronoun used in the "bcc" header of the message header pane.
+headerbccFieldYou=Você
 
 # Shown when content tabs are being loaded.
 loadingTab=Carregando…
 
-applyToCollapsedMsgsTitle=Confirmar exclusão de mensagens não exibidas
-applyToCollapsedMsgs=Alerta - todas as mensagens agrupadas, que no momento não são exibidas, serão excluídas.
+applyToCollapsedMsgsTitle=Confirmar exclusão de mensagens não visíveis
+applyToCollapsedMsgs=Alerta - todas as mensagens agrupadas (não visíveis no momento) serão excluídas.
 applyToCollapsedAlwaysAskCheckbox=Sempre perguntar antes de excluir as mensagens não exibidas de agrupamentos
 applyNowButton=Aplicar
 
-#LOCALIZATION NOTE (glodaSearch_results_why_*):  These strings populate the
-# glodaWhyColumn when performing a gloda-backed search, explaining why a
-# specific result is present in the search.  Because of how the message grouping
-# mechanism works, this value is both the value in the "Why" column as well as
-# the header for the group (when sorting/grouping on the why column.)  Short
-# strings are preferable so the why column can be understood without taking up
-# too much space.
-glodaSearch_results_why_contact=Contato
-glodaSearch_results_why_subject=Assunto
-glodaSearch_results_why_body=Texto da mensagem
-glodaSearch_results_why_attachment=Anexo
+mailServerLoginFailedTitle=Falha na identificação do usuário
+# LOCALIZATION NOTE (mailServerLoginFailedTitle): Insert "%S" in your
+# translation where you wish to display the hostname of the server to which
+# login failed.
+mailServerLoginFailed=Falha na identificação do usuário no servidor %S.
+mailServerLoginFailedRetryButton=&Tentar de novo
+mailServerLoginFailedEnterNewPasswordButton=&Forneça uma nova senha
+
+extensions.{972ce4c6-7e08-4474-a285-3208198ce6fd}.name=Padrão
+extensions.{972ce4c6-7e08-4474-a285-3208198ce6fd}.description=O tema padrão.
