--- a/pt-BR/mail/chrome/mozldap/ldap.properties
+++ b/pt-BR/mail/chrome/mozldap/ldap.properties
@@ -161,7 +161,7 @@ authPromptText=Forneça a senha para %1$S.
 
 ## @name INVALID_CREDENTIALS
 ## @loc none
-49=Invalid credentials
+49=Credenciais inválidas
 
 ## @name INSUFFICIENT_ACCESS
 ## @loc none
