zoek overal => alles doorzoeken

--- a/nl/mail/chrome/messenger/quickSearch.properties
+++ b/nl/mail/chrome/messenger/quickSearch.properties
@@ -1,4 +1,4 @@
-searchEverywhere.label=Zoek overal
+searchEverywhere.label=Alles doorzoeken
 searchSubject.label=Onderwerp filter
 searchFrom.label=Van filter
 searchFromOrSubject.label=Onderwerp of Van filter
