--- a/pl/browser/chrome/browser/browser.properties
+++ b/pl/browser/chrome/browser/browser.properties
@@ -30,6 +30,12 @@ xpinstallDisabledMessage=Instalacja oprogramowania jest obecnie wyłączona. Kli
 xpinstallDisabledButton=Włącz
 xpinstallDisabledButton.accesskey=c
 
+# LOCALIZATION NOTE (lwthemeInstallRequest.message): %S will be replaced with
+# the host name of the site.
+lwthemeInstallRequest.message=Ta witryna (%S) próbuje zainstalować motyw.
+lwthemeInstallRequest.allowButton=Zezwól
+lwthemeInstallRequest.allowButton.accesskey=Z
+
 popupWarning=Program %S nie pozwolił tej witrynie na otwieranie wyskakujących okien.
 popupWarningMultiple=Program %S nie pozwolił tej witrynie na otwarcie %S wyskakujących okien.
 popupWarningButton=Opcje
@@ -69,17 +75,14 @@ sanitizeWithPromptLabel2=Wyczyść historię przeglądania…
 # changed to this.  See UI mockup and comment 11 at bug 480169 -->
 sanitizeDialog2.everything.title=Wyczyść całą historię
 sanitizeButtonOK=Wyczyść teraz
-# LOCALIZATION NOTE (sanitizeEverythingWarning): Warning that appears when "Time
-# range to clear" is set to "Everything" in Clear Recent History dialog.  UI
-# mockup at bug 480169.  This value is a semi-colon list of plural forms.  #1 is
-# replaced with the number of history visits. %S is replaced with the date of
-# the oldest visit.
-# See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
-sanitizeEverythingWarning=Cała historia zostanie wyczyszczona. Historia zawiera jedną stronę odwiedzoną od %S.;Cała historia zostanie wyczyszczona. Historia zawiera #1 strony odwiedzone od %S.;Cała historia zostanie wyczyszczona. Historia zawiera #1 stron odwiedzonych od %S.
-# LOCALIZATION NOTE (sanitizeEverythingNoVisitsWarning): Used in same context
-# as sanitizeEverythingWarning except this is shown instead when there are no
-# visits in the user's history.
-sanitizeEverythingNoVisitsWarning=Cała historia zostanie wyczyszczona.
+# LOCALIZATION NOTE (sanitizeEverythingWarning2): Warning that appears when
+# "Time range to clear" is set to "Everything" in Clear Recent History dialog,
+# provided that the user has not modified the default set of history items to clear.
+sanitizeEverythingWarning2=Cała historia zostanie wyczyszczona.
+# LOCALIZATION NOTE (sanitizeSelectedWarning): Warning that appears when
+# "Time range to clear" is set to "Everything" in Clear Recent History dialog,
+# provided that the user has modified the default set of history items to clear.
+sanitizeSelectedWarning=Wszystkie zaznaczone elementy zostaną wyczyszczone.
 
 # Check for Updates
 updatesItem_default=Sprawdź dostępność aktualizacji…
@@ -222,5 +225,7 @@ ctrlTab.showAll.label=;Wyświetl wszystkie #1 karty;Wyświetl wszystkie #1 kart
 # Used as the bookmark name when saving a keyword for a search field.
 addKeywordTitleAutoFill=Szukaj na stronie %S
 
+extensions.{972ce4c6-7e08-4474-a285-3208198ce6fd}.name=Domyślny
+extensions.{972ce4c6-7e08-4474-a285-3208198ce6fd}.description=Motyw domyślny.
 extensions.{972ce4c6-7e08-4474-a285-3208198ce6fd}.name=Domyślny
 extensions.{972ce4c6-7e08-4474-a285-3208198ce6fd}.description=Motyw domyślny.
