--- a/sk/mail/chrome/messenger/activity.properties
+++ b/sk/mail/chrome/messenger/activity.properties
@@ -79,6 +79,6 @@ indexingStatusExact=Indexuje sa #1. správa z celkovo #2;Indexuje sa #1. správa
 #   #4 is a folder name
 indexingFolderStatusExact=Indexuje sa #1. správa z celkovo #2 v priečinku #4;Indexuje sa #1. správa z celkovo #2 v priečinku #4 (hotovo: #3%);Indexuje sa #1. správa z celkovo #2 v priečinku #4 (hotovo: #3%)
 # LOCALIZATION NOTE (indexedFolder): #1 number of messages; #2 folder name
-indexedFolder=Indexovaná #1 správa v priečinku #2;Indexované #1 správy v priečinku #2;Indexovaných #1. správ v priečinku #2
+indexedFolder=Indexovaná #1 správa v priečinku #2;Indexované #1 správy v priečinku #2;Indexovaných #1 správ v priečinku #2
 # LOCALIZATION NOTE (indexedFolderStatus): #1 number of seconds spent indexing
-indexedFolderStatus=Uplunula #1 sekunda;Uplunuli #1 sekundy;Uplunulo #1 sekúnd
+indexedFolderStatus=Doba trvania: #1 sekunda;Doba trvania: #1 sekundy;Doba trvania: #1 sekúnd
