--- a/sk/mail/chrome/messenger/messenger.properties
+++ b/sk/mail/chrome/messenger/messenger.properties
@@ -482,9 +482,27 @@ fileEmptyTitle = Prázdny súbor
 #LOCALIZATION NOTE(fileEmptyMsg): %S is the filename
 fileEmptyMsg = Súbor %S je prázdny.
 
-# second person direct object pronoun; used in the collapsed header view if
-# the user is in the To or Cc field of a message
-headerFieldYou=ja
+# LOCALIZATION NOTE (headertoFieldYou): second person prepositional object
+# pronoun used in the "to" header of the message header pane.  This is also
+# used for the fallback case if a header-specific localization is not
+# available.
+headertoFieldYou=ja
+
+# LOCALIZATION NOTE (headerfromFieldYou): second person prepositional object
+# pronoun used in the "from" header of the message header pane.
+headerfromFieldYou=ja
+
+# LOCALIZATION NOTE (headerreply-toFieldYou): second person prepositional
+# object pronoun used in the "reply-to" header of the message header pane.
+headerreply-toFieldYou=ja
+
+# LOCALIZATION NOTE (headerccFieldYou): second person prepositional object
+# pronoun used in the "cc" header of the message header pane.
+headerccFieldYou=ja
+
+# LOCALIZATION NOTE (headerbccFieldYou): second person prepositional object
+# pronoun used in the "bcc" header of the message header pane.
+headerbccFieldYou=ja
 
 # Shown when content tabs are being loaded.
 loadingTab=Načítava sa…
@@ -500,19 +518,7 @@ mailServerLoginFailedTitle=Prihlásenie zlyhalo
 # login failed.
 mailServerLoginFailed=Prihlásenie k serveru %S zlyhalo.
 mailServerLoginFailedRetryButton=&Znova
-mailServerLoginFailedEnterNewPasswordButton=Z&adajte nové heslo
+mailServerLoginFailedEnterNewPasswordButton=Z&adať nové heslo
 
 extensions.{972ce4c6-7e08-4474-a285-3208198ce6fd}.name=Predvolená
 extensions.{972ce4c6-7e08-4474-a285-3208198ce6fd}.description=Predvolená téma
-
-#LOCALIZATION NOTE (glodaSearch_results_why_*):  These strings populate the
-# glodaWhyColumn when performing a gloda-backed search, explaining why a
-# specific result is present in the search.  Because of how the message grouping
-# mechanism works, this value is both the value in the "Why" column as well as
-# the header for the group (when sorting/grouping on the why column.)  Short
-# strings are preferable so the why column can be understood without taking up
-# too much space.
-glodaSearch_results_why_contact=Kontakt
-glodaSearch_results_why_subject=Predmet
-glodaSearch_results_why_body=Telo
-glodaSearch_results_why_attachment=Príloha
