--- a/sk/mail/chrome/messenger/addressbook/addressBook.properties
+++ b/sk/mail/chrome/messenger/addressbook/addressBook.properties
@@ -115,6 +115,8 @@ prefixCc=Kópia
 prefixBcc=Skrytá kópia
 addressBook=Adresár
 
+browsePhoto=Fotografia kontaktu
+
 # mailnews.js
 ldap_2.servers.pab.description=Osobný adresár
 ldap_2.servers.history.description=Zozbierané adresy
