l10n for bug 353347 - wrong Quick Search label "Entire Message" must be renamed to "Body" as it does NOT search the entire message! Gross inconsistency with "Search messages" UI where the same search is labeled "Body"

--- a/pl/mail/chrome/messenger/quickSearch.properties
+++ b/pl/mail/chrome/messenger/quickSearch.properties
@@ -5,5 +5,5 @@ searchFrom.label               = Filtrowanie nadawców
 searchFromOrSubject.label      = Filtrowanie tematów lub nadawców
 searchRecipient.label          = Filtrowanie adresatów lub adresatów kopii
 searchRecipientOrSubject.label = Filtrowanie tematów, adresatów lub adresatów kopii
-searchBody.label               = Filtrowanie całych wiadomości
+searchMsgBody.label            = Filtrowanie treści wiadomości
 saveAsVirtualFolder.label      = Zapisz jako folder wyszukiwania
