Bug 353347: Wrong Quick Search label 'Entire Message' must be renamed to 'Body' as it does NOT search the entire message! Gross inconsistency with 'Search messages' UI where the same search is labeled 'Body'

--- a/fr/mail/chrome/messenger/quickSearch.properties
+++ b/fr/mail/chrome/messenger/quickSearch.properties
@@ -4,5 +4,5 @@ searchFrom.label=Filtrer par expéditeur
 searchFromOrSubject.label=Filtrer par sujet ou expéditeur
 searchRecipient.label=Filtrer par destinataire ou personnes en copie
 searchRecipientOrSubject.label=Filtrer par sujet, destinataire ou personnes en copie
-searchBody.label=Filtrer sur tout le message
+searchMsgBody.label=Filtrer sur le corps du message
 saveAsVirtualFolder.label=Enregistrer la recherche comme dossier virtuel
