--- a/nl/mail/chrome/messenger/glodaFacetView.properties
+++ b/nl/mail/chrome/messenger/glodaFacetView.properties
@@ -114,6 +114,11 @@ glodaFacetView.result.message.fromLabel=van:
 # An example usage is  "to: Bob, Chuck, Don".
 glodaFacetView.result.message.toLabel=aan:
 
+# LOCALIZATION NOTE (glodaFacetView.result.message.noSubject): Used in the
+#  faceted search message display to act as a click target for messages with
+#  no subject.
+glodaFacetView.result.message.noSubject=(geen onderwerp)
+
 # LOCALIZATION NOTE(glodaFacetView.results.message.countLabel):
 # This label is displayed above the list of result messages; it tells the user
 #  how many messages we are displaying in the list out of the total number of
