Bug 462578 - Implement Quick Search option 'Subject, Sender or Recipient' (Subject, From, To, CC or BCC) to allow filtering for full conversations with a contact easily; r=asuth, a-tb3=standard8, ui=clarkbw

--- a/nl/mail/chrome/messenger/quickSearch.properties
+++ b/nl/mail/chrome/messenger/quickSearch.properties
@@ -1,4 +1,3 @@
-searchEverywhere.label=Alles doorzoeken
 searchSubject.label=Onderwerp filter
 searchFrom.label=Van filter
 searchFromOrSubject.label=Onderwerp of Van filter
@@ -6,3 +5,4 @@ searchRecipient.label=Aan of Cc filter
 searchRecipientOrSubject.label=Onderwerp, Aan, of Cc filter
 searchBody.label=Hele bericht filter
 saveAsVirtualFolder.label=Zoekopdracht als een virtuele map bewaren…
+searchSubjectFromOrRecipient.label=Onderwerp, Van of Ontvanger filter
