--- a/nl/mail/chrome/messenger/quickSearch.properties
+++ b/nl/mail/chrome/messenger/quickSearch.properties
@@ -3,6 +3,6 @@ searchFrom.label=Van filter
 searchFromOrSubject.label=Onderwerp of Van filter
 searchRecipient.label=Aan of Cc filter
 searchRecipientOrSubject.label=Onderwerp, Aan, of Cc filter
-searchBody.label=Hele bericht filter
-saveAsVirtualFolder.label=Zoekopdracht als een virtuele map bewaren…
+searchMsgBody.label=Berichtkern filter
+saveAsVirtualFolder.label=SZoekopdracht als een virtuele map bewaren…
 searchSubjectFromOrRecipient.label=Onderwerp, Van of Ontvanger filter
