--- a/fr/mail/chrome/messenger/quickSearch.properties
+++ b/fr/mail/chrome/messenger/quickSearch.properties
@@ -1,8 +1,8 @@
-searchEverywhere.label=Rechercher n'importe où
-searchSubject.label=Filtrer par sujet
-searchFrom.label=Filtrer par expéditeur
-searchFromOrSubject.label=Filtrer par sujet ou expéditeur
-searchRecipient.label=Filtrer par destinataire ou personnes en copie
-searchRecipientOrSubject.label=Filtrer par sujet, destinataire ou personnes en copie
-searchMsgBody.label=Filtrer sur le corps du message
+searchSubject.label=Filtrer selon le sujet
+searchFrom.label=Filtrer selon l'expéditeur
+searchFromOrSubject.label=Filtrer selon le sujet ou l'expéditeur
+searchRecipient.label=Filtrer selon le destinataire ou personnes en copie
+searchRecipientOrSubject.label=Filtrer selon le sujet, le destinataire ou les personnes en copie
+searchMsgBody.label=Filtrer selon le corps du message
 saveAsVirtualFolder.label=Enregistrer la recherche comme dossier virtuel
+searchSubjectFromOrRecipient.label=Filtrer selon le sujet, l'expéditeur ou le destinataire
