L10n for bug 311774 - Newsgroup unread counts don't reflect filter actions.

--- a/sv-SE/mail/chrome/messenger/news.properties
+++ b/sv-SE/mail/chrome/messenger/news.properties
@@ -58,11 +58,10 @@ enterPasswordTitle=Servern för diskussionsgrupper kräver lösenord
 okButtonText=Hämta
 
 noNewMessages=Det finns inga nya meddelanden på servern.
-downloadingHeaders=Hämtar %S av %S rubriker
-downloadingFilterHeaders=Hämtar rubriker för filter: %S (%S/%S)
+newNewsgroupHeaders=Hämtar %S av %S rubriker för %S
+newNewsgroupFilteringHeaders=Hämtar rubriker för filter: %S (%S/%S) på %S
 downloadingArticles=Hämtar inlägg %S-%S
 bytesReceived=Hämtar diskussionsgrupper: %S mottagna (%Skbyte lästa med %Skbyte/s)
-checkingForNewNews=Kontrollerar diskussionsgrupp %S av %S på %S efter nya meddelanden
 downloadingArticlesForOffline=Hämtar inlägg %S-%S i %S
 
 onlyCancelOneMessage=Du kan bara ta tillbaka ett inlägg åt gången.
