--- a/sv-SE/mail/chrome/messenger/glodaFacetView.properties
+++ b/sv-SE/mail/chrome/messenger/glodaFacetView.properties
@@ -115,8 +115,14 @@ glodaFacetView.result.message.fromLabel=från:
 # An example usage is  "to: Bob, Chuck, Don".
 glodaFacetView.result.message.toLabel=till:
 
-# LOCALIZATION NOTE(glodaFacetView.results.message.countLabel): Displays the
-#  number of messages displayed in the result area out of the number of
+# LOCALIZATION NOTE (glodaFacetView.result.message.noSubject): Used in the
+#  faceted search message display to act as a click target for messages with
+#  no subject.
+glodaFacetView.result.message.noSubject=(inget ämne)
+
+# LOCALIZATION NOTE(glodaFacetView.results.message.countLabel):
+# This label is displayed above the list of result messages; it tells the user
+#  how many messages we are displaying in the list out of the total number of
 #  messages in the active set (the set of messages remaining after the
 #  application of the facet constraints.)
 # The goal of the various sub-parts here is to make a label along the lines of
