http://www.mozbrowser.nl/forum/viewtopic.php?f=11&t=17866&p=111667#p111667

--- a/nl/mail/chrome/messenger/gloda.properties
+++ b/nl/mail/chrome/messenger/gloda.properties
@@ -91,7 +91,7 @@ gloda.message.attr.attachmentTypes.facetLabel=Bijlagen
 #  the mailing list and only be detected in messages received from the mailing
 #  list.  Extensions may contribute additional detected mailing-list-like
 #  things.
-gloda.message.attr.mailing-list.facetLabel=Beterft e-maillijst
+gloda.message.attr.mailing-list.facetLabel=Betreft e-maillijst
 
 # LOCALIZATION NOTE (gloda.message.attr.tag.*): Stores the tags applied to the
 #  message.  Notably, gmail's labels are not currently exposed via IMAP and we
