--- a/pl/security/manager/chrome/pipnss/pipnss.properties
+++ b/pl/security/manager/chrome/pipnss/pipnss.properties
@@ -336,8 +336,10 @@ certErrorMismatchSinglePlain=Ten certyfikat jest prawidłowy tylko dla %S.
 certErrorMismatchMultiple=Ten certyfikat jest prawidłowym certyfikatem tylko dla następujących nazw:
 certErrorMismatchNoNames=Ten certyfikat nie jest prawidłowy dla żadnej nazwy serwera.
 
-certErrorExpired=Ten certyfikat utracił ważność %S.
-certErrorNotYetValid=Ten certyfikat nie będzie ważny do %S.
+# LOCALIZATION NOTE (certErrorExpiredNow): Do not translate %1$S (date+time of expired certificate) or %2$S (current date+time)
+certErrorExpiredNow=Ten certyfikat utracił ważność %1$S. Aktualny czas: %2$S.
+# LOCALIZATION NOTE (certErrorNotYetValidNow): Do not translate %1$S (date+time certificate will become valid) or %2$S (current date+time)
+certErrorNotYetValidNow=Ten certyfikat nie będzie ważny do %1$S. Aktualny czas: %2$S.
 
 certErrorCodePrefix=(Kod błędu: %S)
 
