Bug 470240  - unrecognized certificate should highlight the case when there's no chain provided

--- a/pl/security/manager/chrome/pipnss/pipnss.properties
+++ b/pl/security/manager/chrome/pipnss/pipnss.properties
@@ -325,6 +325,7 @@ certErrorIntro=%S używa nieprawidłowego certyfikatu bezpieczeństwa.
 # certErrorTrust_SelfSigned: "samopodpisany" mi się nie podoba... (marcoos)
 certErrorTrust_SelfSigned=Certyfikat nie jest zaufany, ponieważ jest on samopodpisany.
 certErrorTrust_UnknownIssuer=Certyfikat nie jest zaufany, ponieważ certyfikat wystawcy jest nieznany.
+certErrorTrust_MissingChain=Certyfikat nie jest zaufany, ponieważ nie dostarczono łańcucha wystawców.
 certErrorTrust_CaInvalid=Certyfikat nie jest zaufany, ponieważ został wystawiony przy użyciu nieprawidłowego certyfikatu CA.
 certErrorTrust_Issuer=Certyfikat nie jest zaufany, ponieważ certyfikat wystawcy nie jest zaufany.
 certErrorTrust_ExpiredIssuer=Certyfikat nie jest zaufany, ponieważ certyfikat wystawcy utracił ważność.
