--- a/pl/editor/ui/chrome/composer/editor.properties
+++ b/pl/editor/ui/chrome/composer/editor.properties
@@ -161,6 +161,5 @@ RemoveLinks=Usuń odnośnik
 StopLinks=Zakończ odnośnik
 NoFormAction=Zaleca się zdefiniowanie akcji dla tego formularza. Formularze automatycznie wysyłające dane wykorzystują bardziej zaawansowaną technikę, dlatego mogą być odmiennie obsługiwane przez różne przeglądarki.
 NoAltText=Jeżeli obrazek jest istotny dla zawartości dokumentu, zaleca się wprowadzenie tekstu alternatywnego, który wyświetlany jest w przeglądarkach tekstowych, a w innych przeglądarkach będzie wyświetlany w czasie wczytywania obrazka, gdy wyświetlenie obrazka będzie niemożliwe albo zablokowane.
-NoHeadTag=Kod źródłowy nie może zostać z powrotem przekonwertowany w edytowany dokument, ponieważ brakuje wymaganego znacznika <head>. Należy dodać znacznik <head>.
-NoBodyTag=Kod źródłowy nie może zostać z powrotem przekonwertowany w edytowany dokument, ponieważ brakuje wymaganego znacznika <body>. Należy dodać znacznik <body>.
+Malformed=Kod źródłowy nie może zostać dołączony do dokumentu, ponieważ nie jest prawidłowym kodem XHTML.
 NoLinksToCheck=Brak elementów z odnośnikami do sprawdzenia
