--- a/fr/mail/chrome/messenger/news.properties
+++ b/fr/mail/chrome/messenger/news.properties
@@ -54,8 +54,15 @@ enterPasswordTitle=Mot de passe du serveur de groupes
 okButtonText=Téléchargement
 
 noNewMessages=Il n'y a pas de nouveaux messages sur le serveur.
-newNewsgroupHeaders=Téléchargement de %S en-têtes sur %S depuis %S
-newNewsgroupFilteringHeaders=Récupération des en-têtes pour les filtres : %S (%S/%S) depuis %S
+# LOCALIZATION NOTE (newNewsgroupHeaders): %1$S is the number of the current
+# header being downloaded, %2$S is the number of headers to be downloaded, and
+# %3$S is the newsgroup whose headers are being downloaded.
+newNewsgroupHeaders=Téléchargement de %1$S en-têtes sur %2$S depuis %3$S
+# LOCALIZATION NOTE (newNewsgroupFilteringHeaders): %1$S is the name of the MIME
+# header being filtered on, %2$S is the number of the current header being
+# downloaded, %3$S is the number of headers to be downloaded, and %4$S is the
+# newsgroup whose headers are being downloaded.
+newNewsgroupFilteringHeaders=Récupération des en-têtes pour les filtres : %1$S (%2$S/%3$S) depuis %4#S
 downloadingArticles=Téléchargement des articles %S-%S
 bytesReceived=Téléchargement du groupe : %S reçus (%SKo lu à %SKo/s)
 downloadingArticlesForOffline=Téléchargement des articles %S-%S dans %S
