--- a/fr/mail/chrome/messenger/gloda.properties
+++ b/fr/mail/chrome/messenger/gloda.properties
@@ -51,9 +51,9 @@
 #  facet display.  If not provided, we will fall back to
 #  "glodaFacetView.facets.remainder.fallbackLabel".
 
-+# LOCALIZATION NOTE (gloda.message.attr.account.*): Stores the account in which
-+#  a message's folder is located.
-+gloda.message.attr.account.facetLabel=Compte
+# LOCALIZATION NOTE (gloda.message.attr.account.*): Stores the account in which
+#  a message's folder is located.
+gloda.message.attr.account.facetLabel=Compte
 
 # LOCALIZATION NOTE (gloda.message.attr.folder.*): Stores the message folder in
 #  which the message is stored.
